--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   dio: ^5.8.0+1
   get_it: ^8.0.3
   go_router: ^15.1.2
+  drift: ^2.26.1
+  drift_flutter: ^0.2.4
+  path_provider: ^2.1.5
+  drift_dev: ^2.26.1
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +30,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   json_serializable: ^6.8.0
   build_runner: ^2.4.11
+
 
 flutter:
   uses-material-design: true
