--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   drift_flutter: ^0.2.4
   path_provider: ^2.1.5
   drift_dev: ^2.26.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
